# bindscript

./: .gitignore  .hlint.yaml  README.md  bindscript.cabal  default.nix
app/: Main.hs
src/Bindscript/: Auto.hs  Javascript.hs  Parser.hs  Purescript.hs  Types.hs
test/: Parse.hs
test/input/: teste.bs
