name:
  bindscript
version:
  0.1.0
synopsis:
  Synopsis
description:
  DSL for generating JS bindings for Purescript
license:
  BSD3
author:
  Juan Raphael Diaz Simões
maintainer:
  mail@guaraqe.gq
build-type:
  Simple
cabal-version:
  >=1.10

executable bindscript
  main-is:
    Main.hs
  build-depends:
    base,
    bindscript,
    directory,
    directory-tree,
    filepath,
    megaparsec,
    optparse-generic,
    text
  hs-source-dirs:
    app
  ghc-options:
    -O2
    -Wall
  default-language:
    Haskell2010

library
  exposed-modules:
    Bindscript.Types
    Bindscript.Parser
    Bindscript.Auto
    Bindscript.Javascript
    Bindscript.Purescript
  build-depends:
    base,
    megaparsec,
    prettyprinter,
    text
  hs-source-dirs:
    src
  ghc-options:
    -O2
    -Wall
  default-language:
    Haskell2010

test-suite parse-test
  type:
    exitcode-stdio-1.0
  main-is:
    Parse.hs
  hs-source-dirs:
    test
  build-depends:
    base,
    bindscript,
    megaparsec,
    tasty,
    tasty-hunit,
    text
  default-language:
    Haskell2010
